--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "chat-story-app",
   "version": "0.1.0",
   "private": true,
+  "main": "src/app.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
